--- a/src/components/DataPage/DataPage.scss
+++ b/src/components/DataPage/DataPage.scss
@@ -1,14 +1,35 @@
-@use './src/styles/_colors';
+@import './../philly-landlord-spotter/src/styles/colors';
 
-.DataPageContainer {
-    margin-top: 6vw !important;
+.DataPageWrapper {
+    padding-top: 6vw !important;
     text-align: left;
-    margin-bottom: 3vw;
+    padding-bottom: 3vw;
+    background-attachment: fixed;
+    background-position: right top;
+    width: 100%;
+    height: auto;
+    .DataPageContainer {
+        .DataPageSection {
+            background-color: $background_blur;
+            box-shadow: 0 .35vw .35vw 0 rgba(0, 0, 0, 0.6);
+            padding: 1.5vw 1.5vw .5vw;
+            margin-bottom: 2rem;
+        }
+        .DataPageJumbotron {
+            background-color: $background_blur;
+            box-shadow: 0 .35vw .35vw 0 rgba(0, 0, 0, 0.6);
+            color: $white;
+        }
+        .whiteText {
+            color: $white;
+        }
+    }
 }
 
 .dataDescCardHeader {
-    background-color: colors.$background_grey !important;
-    color: colors.$white !important;
+    background-color: $building_grey !important;
+    color: $white !important;
+    border: 1px solid $white;
 }
 
 .dataDescCardBold {
