--- a/src/App.scss
+++ b/src/App.scss
@@ -1,38 +1,18 @@
+@import './../philly-landlord-spotter/src/styles/colors';
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+  .bg-dark {
+    background-color: $building_grey !important;
+  }
+  .navText {
+    font-family: ff-basic-gothic-pro, sans-serif;
+    font-weight: 500;
+    font-style: normal;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media (max-width: 320px) {
+  .navText {
+    font-size: 12pt !important;
   }
 }
