--- a/src/components/OwnerPicker/OwnerPicker.scss
+++ b/src/components/OwnerPicker/OwnerPicker.scss
@@ -1,48 +1,83 @@
-@use './src/styles/_colors';
+@import './../philly-landlord-spotter/src/styles/colors';
+
+.ownerLoading {
+    text-align: center;
+    background-color: $background_blur;
+    box-shadow: 0 .35vw .35vw 0 rgba(0, 0, 0, 0.6);
+    padding: 10vw;
+    color: $white;
+    width: 100%;
+    height: 80vh;
+}
+
+.ownerPickerWrapper {
+    background-attachment: fixed;
+    background-position: right top;
+    width: 100%;
+    height: 100vh;
+    padding-top: 5vw;
+    .ownerPickerContainer {
+        text-align: center;
+        background-color: $background_blur;
+        box-shadow: 0 .35vw .35vw 0 rgba(0, 0, 0, 0.6);
+        padding: 1.5vw 1.5vw .5vw;
+        color: $white;
+    }
+}
+
+.list-group-item {
+    background-color: $background_grey !important;
+    color: $white !important;
+}
 
 .list-group-item.active {
-    background-color: colors.$background_grey !important;
-    border-color: colors.$background_grey !important;
+    background-color: $building_grey !important;
+    border-color: $building_grey !important;
+}
+
+.list-group-item:hover {
+    background-color: $building_grey !important;
+    border-color: $building_grey !important;
 }
 
 .list-group {
     overflow-y: scroll;
-    height: 80vh;
+    height: 75vh;
 }
 
 .badge {
-    border: 1px solid colors.$background_grey;
+    border: 1px solid $building_grey;
     margin: 0 2px;
 }
 
 .b1950 {
-    background-color: colors.$pill_blue;
-    color: colors.$white;
+    background-color: $pill_blue;
+    color: $white;
 }
 
 .b2000 {
-    background-color: colors.$pill_magenta;
-    color: colors.$white;
+    background-color: $pill_magenta;
+    color: $white;
 }
 
 .b2010 {
-    background-color: colors.$pill_green;
-    color: colors.$white;
+    background-color: $pill_green;
+    color: $white;
 }
 
 .b2015 {
-    background-color: colors.$pill_yellow;
-    color: colors.$white;
+    background-color: $pill_yellow;
+    color: $white;
 }
 
 .b2020 {
-    background-color: colors.$pill_red;
-    color: colors.$white;
+    background-color: $pill_red;
+    color: $white;
 }
 
 .bUnknown {
-    color: colors.$black;
-    background-color: colors.$white;
+    color: $black;
+    background-color: $white;
 }
 
 .badgeContainer {
