--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -6,3 +6,6 @@ $pill_yellow: #F3A712;
 $pill_green: #09BC8A;
 $pill_magenta: #da4167;
 $pill_blue: #1c6e8c;
+$building_yellow: #FFC700;
+$building_grey: #1A1A1A;
+$background_blur: rgba(0, 0, 0, 0.85);
