--- a/src/components/ZipCodePage/ZipCodePage.scss
+++ b/src/components/ZipCodePage/ZipCodePage.scss
@@ -15,3 +15,33 @@
     box-shadow: 0 .35vw .35vw 0 rgba(0, 0, 0, 0.6);
     color: $white;
 }
+
+@media (max-width: 1024px) {
+    .zipCodePageContainer {
+        padding-top: 8vw;
+    }
+}
+
+@media (max-width: 896px) {
+    .zipCodeBarChartDropdown {
+        padding-bottom: 2vw;
+    }
+}
+
+@media (max-width: 591px) {
+    .zipCodePageContainer {
+        padding-top: 11vw;
+    }
+}
+
+@media (max-width: 450px) {
+    .zipCodePageContainer {
+        padding-top: 15vw;
+    }
+}
+
+@media (max-width: 411px) {
+    .zipCodePageContainer {
+        padding-top: 17vw;
+    }
+}
