--- a/src/components/ZipCodePage/ZipCodePage.scss
+++ b/src/components/ZipCodePage/ZipCodePage.scss
@@ -1,5 +1,3 @@
-@import './../philly-landlord-spotter/src/styles/colors';
-
 .zipCodePageContainer {
     background-attachment: scroll;
     background-position: right top;
@@ -11,9 +9,9 @@
 
 .zipCodePageJumbotron {
     text-align: left;
-    background-color: $background_blur !important;
+    background-color: rgba(0, 0, 0, 0.85) !important;
     box-shadow: 0 .35vw .35vw 0 rgba(0, 0, 0, 0.6);
-    color: $white;
+    color: #fff;
 }
 
 @media (max-width: 1024px) {
