--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,6 @@
-@import './../philly-landlord-spotter/src/styles/colors';
-
 .App {
   .bg-dark {
-    background-color: $building_grey !important;
+    background-color: #1A1A1A !important;
   }
   .navText {
     font-family: ff-basic-gothic-pro, sans-serif;
