--- a/src/components/OwnerSearchForm/OwnerSearchForm.scss
+++ b/src/components/OwnerSearchForm/OwnerSearchForm.scss
@@ -6,6 +6,10 @@
       width: 100% !important;
     }
   }
+  .SearchFormButton {
+    background-color: #343a40 !important;
+    color: #fff !important;
+  }
   .resultsSection {
     margin-top: 1vw;
     .OwnerSearchFormListGroup {
