upgrades with data

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,6 @@
 .App {
   .bg-dark {
-    background-color: #1A1A1A !important;
+    background-color: #1a1a1a !important;
   }
   .navText {
     font-family: ff-basic-gothic-pro, sans-serif;
