--- a/src/components/MapPin/MapPin.scss
+++ b/src/components/MapPin/MapPin.scss
@@ -1,3 +1,4 @@
-.bs-popover-auto[x-placement^=right], .bs-popover-right {
-    margin-left: 1.5rem !important;
+.bs-popover-auto[x-placement^="right"],
+.bs-popover-right {
+  margin-left: 1.5rem !important;
 }
