--- a/src/components/MapPopover/MapPopover.scss
+++ b/src/components/MapPopover/MapPopover.scss
@@ -1,22 +1,22 @@
 .housePopover {
-    width: 50vw;
-    color: #1A1A1A;
+  width: 50vw;
+  color: #1a1a1a;
 }
 
 @media (max-width: 425px) {
-    .housePopover {
-        width: 65vw;
-    }
+  .housePopover {
+    width: 65vw;
+  }
 }
 
 @media (max-width: 375px) {
-    .housePopover {
-        width: 65vw;
-    }
+  .housePopover {
+    width: 65vw;
+  }
 }
 
 @media (max-width: 330px) {
-    .housePopover {
-        width: 65vw;
-    }
+  .housePopover {
+    width: 65vw;
+  }
 }
