--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,11 +1,11 @@
 $background_grey: #343a40;
 $white: #fff;
 $black: #000;
-$pill_red: #F23602;
-$pill_yellow: #F3A712;
-$pill_green: #09BC8A;
+$pill_red: #f23602;
+$pill_yellow: #f3a712;
+$pill_green: #09bc8a;
 $pill_magenta: #da4167;
 $pill_blue: #1c6e8c;
-$building_yellow: #FFC700;
-$building_grey: #1A1A1A;
+$building_yellow: #ffc700;
+$building_grey: #1a1a1a;
 $background_blur: rgba(0, 0, 0, 0.85);
