--- a/src/components/CWZipCodeBarChart/CWZipCodeBarChart.scss
+++ b/src/components/CWZipCodeBarChart/CWZipCodeBarChart.scss
@@ -1,18 +1,18 @@
 .cwZipCodeAnalysis {
-    margin-bottom: 2vw;
-    background-color: rgba(0, 0, 0, 0.85);
-    box-shadow: 0 .35vw .35vw 0 rgba(0, 0, 0, 0.6);
-    padding: 1.5vw 1.5vw .5vw;
-    color: #fff;
+  margin-bottom: 2vw;
+  background-color: rgba(0, 0, 0, 0.85);
+  box-shadow: 0 0.35vw 0.35vw 0 rgba(0, 0, 0, 0.6);
+  padding: 1.5vw 1.5vw 0.5vw;
+  color: #fff;
 }
 
 .chartSectionHeader {
-    text-align: center;
-    padding-top: 2vw;
-    margin-bottom: 0 !important;
+  text-align: center;
+  padding-top: 2vw;
+  margin-bottom: 0 !important;
 }
 
 .dropdown-menu {
-    height:200px;
-    overflow-y:auto;
+  height: 200px;
+  overflow-y: auto;
 }
