--- a/src/components/DataExplainerCard/DataExplainerCard.scss
+++ b/src/components/DataExplainerCard/DataExplainerCard.scss
@@ -1,5 +1,5 @@
 .dataDescCardHeader {
-  background-color: #1A1A1A !important;
+  background-color: #1a1a1a !important;
   color: #fff !important;
   border: 1px solid #fff;
 }
