--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -20,18 +20,18 @@
     }
     .heroDivOne {
       width: 45vw;
-      height:20vw;
-      background-color: #1A1A1A;
-      box-shadow: 1vw 1vw #FFC700, 0 2.1vw 2.1vw 0 rgba(0, 0, 0, 0.8);
+      height: 20vw;
+      background-color: #1a1a1a;
+      box-shadow: 1vw 1vw #ffc700, 0 2.1vw 2.1vw 0 rgba(0, 0, 0, 0.8);
       .heroText {
         font-family: gothic-open-shaded, sans-serif;
         font-weight: 400;
-        font-style: normal;;
-        color: #FFC700;
+        font-style: normal;
+        color: #ffc700;
         font-size: 70pt;
         line-height: 1em;
         text-align: left;
-        padding: .5em;
+        padding: 0.5em;
       }
     }
   }
@@ -50,15 +50,15 @@
 }
 
 @media (max-width: 1195px) {
-.home {
-  height: 97vh;
-  .heroDivContainer {
-    .heroDivOne {
-      width: 54vw;
-      height: 22vw;
+  .home {
+    height: 97vh;
+    .heroDivContainer {
+      .heroDivOne {
+        width: 54vw;
+        height: 22vw;
+      }
     }
   }
-}
 }
 
 @media (max-width: 1024px) {
@@ -164,7 +164,7 @@
         height: 40vw;
         .heroText {
           font-size: 36pt;
-          padding: .7em .5em .5em;
+          padding: 0.7em 0.5em 0.5em;
         }
       }
     }
