--- a/src/components/HomeButton/HomeButton.scss
+++ b/src/components/HomeButton/HomeButton.scss
@@ -1,6 +1,6 @@
 .homeButton {
-  background-color: #1A1A1A;
-  box-shadow: .5vw .5vw #FFC700, 0 1vw 1vw 0 rgba(0, 0, 0, 0.8);
+  background-color: #1a1a1a;
+  box-shadow: 0.5vw 0.5vw #ffc700, 0 1vw 1vw 0 rgba(0, 0, 0, 0.8);
   width: 13vw;
   margin-right: 3vw;
   cursor: pointer;
@@ -10,7 +10,7 @@
   }
   p {
     padding: 1vw;
-    color: #FFC700;
+    color: #ffc700;
     font-family: ff-basic-gothic-pro, sans-serif;
     font-weight: 500;
     font-style: normal;
@@ -35,14 +35,14 @@
 
 @media (max-width: 1024px) {
   .homeButton {
-    box-shadow: .5vw .5vw #FFC700, 0 1vw 1vw 0 rgba(0, 0, 0, 0.8);
+    box-shadow: 0.5vw 0.5vw #ffc700, 0 1vw 1vw 0 rgba(0, 0, 0, 0.8);
     width: 17vw;
   }
 }
 
 @media (max-width: 896px) {
   .homeButton {
-    box-shadow: 1vw 1vw #FFC700, 0 1.5vw 1.5vw 0 rgba(0, 0, 0, 0.8);
+    box-shadow: 1vw 1vw #ffc700, 0 1.5vw 1.5vw 0 rgba(0, 0, 0, 0.8);
     width: 18vw;
     margin-right: 7.5vw;
   }
@@ -78,4 +78,3 @@
     margin-right: 3.5vw;
   }
 }
-
