--- a/src/components/MapModal/MapModal.scss
+++ b/src/components/MapModal/MapModal.scss
@@ -1,4 +1,3 @@
-
 .MapboxPropertyMapWrapper {
   height: 50vh !important;
   margin-bottom: 7vw;
@@ -29,14 +28,15 @@
 }
 
 .MapModal {
-  box-shadow: 0 .35vw .35vw 0 rgba(0, 0, 0, 0.6);
+  box-shadow: 0 0.35vw 0.35vw 0 rgba(0, 0, 0, 0.6);
   .close {
-    color: #F3A712 !important;
+    color: #f3a712 !important;
   }
-  .modal-body, .modal-header {
-    background-color: #1A1A1A;
-    color:  #fff;
-    border-bottom-color: #F3A712;
+  .modal-body,
+  .modal-header {
+    background-color: #1a1a1a;
+    color: #fff;
+    border-bottom-color: #f3a712;
   }
   .MapModalLoading {
     text-align: center;
