--- a/src/components/OwnerPicker/OwnerPicker.scss
+++ b/src/components/OwnerPicker/OwnerPicker.scss
@@ -1,191 +1,190 @@
 .ownerLoading {
-    text-align: center;
-    background-color: rgba(0, 0, 0, 0.85);
-    box-shadow: 0 .35vw .35vw 0 rgba(0, 0, 0, 0.6);
-    padding: 10vw;
-    color:  #fff;
-    width: 100%;
-    height: 80vh;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.85);
+  box-shadow: 0 0.35vw 0.35vw 0 rgba(0, 0, 0, 0.6);
+  padding: 10vw;
+  color: #fff;
+  width: 100%;
+  height: 80vh;
 }
 
 .ownerPickerWrapper {
-    background-attachment: fixed;
-    background-position: right top;
-    width: 100%;
-    height: 100vh;
-    padding-top: 5vw;
-    .ownerPickerContainer {
-        text-align: center;
-        background-color: rgba(0, 0, 0, 0.85);
-        box-shadow: 0 .35vw .35vw 0 rgba(0, 0, 0, 0.6);
-        padding: 1.5vw 1.5vw .5vw;
-        color: #fff;
-    }
+  background-attachment: fixed;
+  background-position: right top;
+  width: 100%;
+  height: 100vh;
+  padding-top: 5vw;
+  .ownerPickerContainer {
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.85);
+    box-shadow: 0 0.35vw 0.35vw 0 rgba(0, 0, 0, 0.6);
+    padding: 1.5vw 1.5vw 0.5vw;
+    color: #fff;
+  }
 }
 
 .OwnerPickerListGroup {
-    overflow-y: scroll;
-    height: 75vh;
-    .OwnerPickerListGroupItem {
-        background-color: #343a40 !important;
-        color: #fff !important;
-    }
+  overflow-y: scroll;
+  height: 75vh;
+  .OwnerPickerListGroupItem {
+    background-color: #343a40 !important;
+    color: #fff !important;
+  }
 
-    .list-group-item.active {
-        background-color: #1A1A1A !important;
-        border-color: #1A1A1A !important;
-    }
+  .list-group-item.active {
+    background-color: #1a1a1a !important;
+    border-color: #1a1a1a !important;
+  }
 
-    .OwnerPickerListGroupItem:hover {
-        background-color: #1A1A1A !important;
-        border-color: #1A1A1A !important;
-    }
+  .OwnerPickerListGroupItem:hover {
+    background-color: #1a1a1a !important;
+    border-color: #1a1a1a !important;
+  }
 }
 
 .badge {
-    border: 1px solid #1A1A1A;
-    margin: 0 2px;
+  border: 1px solid #1a1a1a;
+  margin: 0 2px;
 }
 
 .b1950 {
-    background-color: #1c6e8c;
-    color: #fff;
+  background-color: #1c6e8c;
+  color: #fff;
 }
 
 .b2000 {
-    background-color: #da4167;
-    color: #fff;
+  background-color: #da4167;
+  color: #fff;
 }
 
 .b2010 {
-    background-color: #09BC8A;
-    color: #fff;
+  background-color: #09bc8a;
+  color: #fff;
 }
 
 .b2015 {
-    background-color: #FFC700;
-    color: #fff;
+  background-color: #ffc700;
+  color: #fff;
 }
 
 .b2020 {
-    background-color: #F23602;
-    color: #fff;
+  background-color: #f23602;
+  color: #fff;
 }
 
 .bUnknown {
-    color: #000;
-    background-color: #fff;
+  color: #000;
+  background-color: #fff;
 }
 
 .badgeContainer {
-    margin-top: 6vw;
-    margin-bottom: 2vw;
+  margin-top: 6vw;
+  margin-bottom: 2vw;
 }
 
 @media (max-width: 1366px) {
-    .ownerPickerWrapper {
-        padding-top: 6vw;
-    }
-    .noMapCol {
-        padding-bottom: 1vw;
-    }
+  .ownerPickerWrapper {
+    padding-top: 6vw;
+  }
+  .noMapCol {
+    padding-bottom: 1vw;
+  }
 }
 
 @media (max-width: 1024px) {
-    .ownerPickerWrapper {
-        padding-top: 8vw;
-    }
-    .badgeContainer {
-        margin-top: 8vw;
-    }
+  .ownerPickerWrapper {
+    padding-top: 8vw;
+  }
+  .badgeContainer {
+    margin-top: 8vw;
+  }
 }
 
 @media (max-width: 896px) {
-    .ownerPickerWrapper {
-        padding-top: 8vw;
-        height: 180vh;
-    }
-    .badgeContainer {
-        margin-top: 10vw;
-    }
-    .noMapCol {
-        padding-top: 1vw;
-    }
+  .ownerPickerWrapper {
+    padding-top: 8vw;
+    height: 180vh;
+  }
+  .badgeContainer {
+    margin-top: 10vw;
+  }
+  .noMapCol {
+    padding-top: 1vw;
+  }
 }
 
 @media (max-width: 768px) {
-    .ownerPickerWrapper {
-        height: 258vh;
-        padding-top: 9vw;
-    }
-    /*Fix for Iphones*/
-    .list-group {
-        overflow-y: scroll;
-        height: 100%;
-        margin-bottom: 6vw !important;
-    }
+  .ownerPickerWrapper {
+    height: 258vh;
+    padding-top: 9vw;
+  }
+  /*Fix for Iphones*/
+  .list-group {
+    overflow-y: scroll;
+    height: 100%;
+    margin-bottom: 6vw !important;
+  }
 }
 
 @media (max-width: 591px) {
-    .ownerPickerWrapper {
-        padding-top: 13vw;
-    }
-    .badgeContainer {
-        margin-top: 15vw;
-    }
+  .ownerPickerWrapper {
+    padding-top: 13vw;
+  }
+  .badgeContainer {
+    margin-top: 15vw;
+  }
 }
 
 @media (max-width: 576px) {
-    .noMapCol {
-        margin-top: 3vw;
-    }
+  .noMapCol {
+    margin-top: 3vw;
+  }
 }
 
 @media (max-width: 450px) {
-    .ownerPickerWrapper {
-        padding-top: 20vw;
-        padding-left: 5vw;
-        padding-right: 5vw;
-    }
-    .badgeContainer {
-        margin-top: 30vw;
-    }
-    .noMapCol {
-        margin-top: 5vw;
-    }
-    .OwnerPickerListGroupItem {
-        font-size: 12pt;
-    }
-    .landlordTitle {
-        padding-top: 3vw;
-    }
+  .ownerPickerWrapper {
+    padding-top: 20vw;
+    padding-left: 5vw;
+    padding-right: 5vw;
+  }
+  .badgeContainer {
+    margin-top: 30vw;
+  }
+  .noMapCol {
+    margin-top: 5vw;
+  }
+  .OwnerPickerListGroupItem {
+    font-size: 12pt;
+  }
+  .landlordTitle {
+    padding-top: 3vw;
+  }
 }
 
 @media (max-width: 390px) {
-    .badgeContainer {
-        margin-top: 36vw;
-    }
-    .noMapCol {
-        margin-top: 10vw;
-    }
-    .OwnerPickerListGroupItem {
-        font-size: 10pt;
-    }
+  .badgeContainer {
+    margin-top: 36vw;
+  }
+  .noMapCol {
+    margin-top: 10vw;
+  }
+  .OwnerPickerListGroupItem {
+    font-size: 10pt;
+  }
 }
 
 @media (max-width: 375px) {
-    .badgeContainer {
-        margin-top: 36vw;
-    }
-    .noMapCol {
-        margin-top: 10vw;
-    }
-    .OwnerPickerListGroupItem {
-        font-size: 10pt;
-    }
-    .ownerPickerWrapper {
-        height: auto;
-        padding-bottom: 5vw;
-    }
+  .badgeContainer {
+    margin-top: 36vw;
+  }
+  .noMapCol {
+    margin-top: 10vw;
+  }
+  .OwnerPickerListGroupItem {
+    font-size: 10pt;
+  }
+  .ownerPickerWrapper {
+    height: auto;
+    padding-bottom: 5vw;
+  }
 }
-
